--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/backend.css": "/css/backend.css",
-    "/css/frontend.css": "/css/frontend.css"
+    "/css/frontend/single.css": "/css/frontend/single.css",
+    "/css/frontend/home.css": "/css/frontend/home.css",
+    "/css/frontend.css": "/css/frontend.css",
+    "/js/app.min.js": "/js/app.min.js"
 }
