- added custom builder override - post create and post update - added post content - added logic for reorder post content - added support to load saved Media in database - added cropper modal and cropper js - added provider for cookie - added unauthorized blade and logic for API and Backend auth routes - moved controller from api to folder Api

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,7 +3,7 @@
     "/js/backend/app.js": "/js/backend/app.js",
     "/css/backend/dashboard.css": "/css/backend/dashboard.css",
     "/css/backend.css": "/css/backend.css",
-    "/css/frontend/single.css": "/css/frontend/single.css",
+    "/css/frontend/video-js.min.css": "/css/frontend/video-js.min.css",
     "/css/frontend/home.css": "/css/frontend/home.css",
     "/css/frontend.css": "/css/frontend.css",
     "/css/backend/login.css": "/css/backend/login.css",
