--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,16 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#DB_CONNECTION=sqlite
+#DB_DATABASE=./database.sqlite
+#DB_FOREIGN_KEYS=true
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mathmpr_db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=mathmpr
+DB_USERNAME=mathmpr
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
